2007-01-15  Don Allingham  <don@gramps-project.org>
	* src/DateEdit.py: make "bad date" translatable.

2007-01-14  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: 0000627: Relationship graph PDF papersize problems.
	    Use ghostscript instead of epstopdf

2007-01-13  Don Allingham  <don@gramps-project.org>
	* po/gramps.pot: update

2007-01-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: 0000705: font size in relationship graph

2007-01-13  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DisplayTabs/_NoteTab.py: beginning of formatted tabs

2007-01-12  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsWidgets.py: cleanup
	* src/DateEdit.py: align DateEdit methods to ValidatableMaskedEntry
	behavior

2007-01-11  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py (GedcomParser): fix parsing of the PLAC.FORM
	construct, handle Heredis's broken REPO format

2007-01-11  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/DisplayState.py (DisplayState.__init__): fix level of 'root'
	looger and WarnHandler
	* src/GrampsWidgets.py: ValidatableMaskedEntry.set_default_error_msg()
	method added

2007-01-10  Don Allingham  <don@gramps-project.org>
	* src/GrampsWidgets.py: add support for an "empty" signal on 
	ValidatableMaskedEntry so that we can update the value when the
	string has been cleared (bug #821)
	* src/DateEdit.py: catch empty signal (bug #821)

2007-01-09  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Fix 0000817: typo "syle" intead of "style"

2007-01-09  Alex Roitman  <shura@gramps-project.org>
	* src/const.py.in: use proper macros.
	* src/gramps.py: Correctly define dirs.

2007-01-10  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/Selectors/_BaseSelector.py (__init__, _on_row_activated):
	enable selection by Double-click or Enter

2007-01-09  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>