@@ -1,4 +1,7 @@
 2007-01-15  Don Allingham  <don@gramps-project.org>
+
+	* src/ViewManager.py (check_for_portability_problems): simplify the
+	warning message.
 	* src/DateEdit.py: make "bad date" translatable.
 
 2007-01-14  Brian Matherly  <brian@gramps-project.org>
